--- a/PalPair/Web.config
+++ b/PalPair/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -40,7 +40,7 @@
     </staticContent>
     <rewrite>
       <rules>
-        <rule name="Redirect to HTTPS" stopProcessing="true">
+        <rule name="Redirect to HTTPS" enabled="false" stopProcessing="true">
           <match url="(.*)" />
           <conditions>
             <add input="{HTTPS}" pattern="^OFF$" />
